Update French translations.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-29  Bruno Haible  <bruno@clisp.org>
+
+	* fr.po: Update from Michel Robitaille <robitail@iro.umontreal.ca>.
+
 2001-11-05  Bruno Haible  <haible@clisp.cons.org>
 
 	* de.po: Update from Karl Eichwalder <ke@suse.de>.
