--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-21  Bruno Haible  <bruno@clisp.org>
+
+	* format-c-2: Test also the type incompatibility due to size.
+
 2005-04-11  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-0.14.4 released.
