--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-23  Bruno Haible  <bruno@clisp.org>
+
+	* gettext-po.h (LIBGETTEXTPO_VERSION): Bump version number.
+
 2005-05-21  Bruno Haible  <bruno@clisp.org>
 
 	* format-gcc-internal.c: Update for GCC 4.0.
