--- a/gettext-runtime/ChangeLog
+++ b/gettext-runtime/ChangeLog
@@ -1,5 +1,9 @@
 2005-05-23  Bruno Haible  <bruno@clisp.org>
 
+	* gettext-0.14.5 released.
+
+2005-05-23  Bruno Haible  <bruno@clisp.org>
+
 	* windows/intl.rc: Bump version number to 0.14.5.
 
 2005-04-11  Bruno Haible  <bruno@clisp.org>
