--- a/gettext-tools/ChangeLog
+++ b/gettext-tools/ChangeLog
@@ -1,5 +1,9 @@
 2005-05-23  Bruno Haible  <bruno@clisp.org>
 
+	* gettext-0.14.5 released.
+
+2005-05-23  Bruno Haible  <bruno@clisp.org>
+
 	* windows/gettextlib.rc: Bump version number to 0.14.5.
 	* windows/gettextsrc.rc: Likewise.
 	* windows/gettextpo.rc: Likewise.
