--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,5 +1,9 @@
 2005-05-23  Bruno Haible  <bruno@clisp.org>
 
+	* gettext-0.14.5 released.
+
+2005-05-23  Bruno Haible  <bruno@clisp.org>
+
 	* gettext-po.h (LIBGETTEXTPO_VERSION): Bump version number.
 
 2005-05-21  Bruno Haible  <bruno@clisp.org>
