--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-23  Bruno Haible  <bruno@clisp.org>
+
+	* gettext-0.14.5 released.
+
 2005-05-21  Bruno Haible  <bruno@clisp.org>
 
 	* format-gcc-internal-1: Add tests for GCC-4.0 directives %<, %>, %',
