--- a/gettext-tools/examples/ChangeLog
+++ b/gettext-tools/examples/ChangeLog
@@ -2,6 +2,13 @@
 
 	* gettext-0.14.5 released.
 
+2005-05-23  Bruno Haible  <bruno@clisp.org>
+
+	* po/zh_TW.po: New file, from Abel Cheung <abelcheung@gmail.com>.
+	* po/LINGUAS: Add it.
+	* hello-*/po/LINGUAS: Update.
+	* Makefile.am (EXAMPLESFILES): Add the new message catalogs.
+
 2005-04-11  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-0.14.4 released.
