--- a/gettext-tools/po/ChangeLog
+++ b/gettext-tools/po/ChangeLog
@@ -2,6 +2,14 @@
 
 	* gettext-0.14.5 released.
 
+2005-05-23  Bruno Haible  <bruno@clisp.org>
+
+	* it.po: Update from Marco Colombo <m.colombo@ed.ac.uk>.
+	* pl.po: Update from Rafał Maszkowski <rzm@icm.edu.pl>.
+	* vi.po: New file, from Clytie Siddall <clytie@riverland.net.au>.
+	* zh_TW.po: Update from Abel Cheung <abelcheung@gmail.com>.
+	* LINGUAS: Add vi.
+
 2005-04-11  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-0.14.4 released.
