--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Version 0.14.6 - June 2006
+
+* Updated the meaning of 'gcc-internal-format' to match GCC 4.1.
+
 Version 0.14.5 - May 2005
 
 * Updated the meaning of 'gcc-internal-format' to match GCC 4.0.
