--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,8 @@
+2006-06-20  Bruno Haible  <bruno@clisp.org>
+
+	* format-gcc-internal-1: Update to GCC 4.1 internal format strings.
+	* format-gcc-internal-2: Likewise.
+
 2005-05-23  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-0.14.5 released.
