--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-21  Bruno Haible  <bruno@clisp.org>
+
+	* gettext-po.h (LIBGETTEXTPO_VERSION): Bump version number.
+
 2006-06-20  Bruno Haible  <bruno@clisp.org>
 
 	* format-gcc-internal.c (struct unnumbered_arg): Remove type.
