--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,5 +1,14 @@
 2006-06-21  Bruno Haible  <bruno@clisp.org>
 
+	* gettext-0.14.6 released.
+
+2006-06-21  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.am (CLEANFILES): Add msgfmt.net.exe.mdb,
+	msgunfmt.net.exe.mdb.
+
+2006-06-21  Bruno Haible  <bruno@clisp.org>
+
 	* gettext-po.h (LIBGETTEXTPO_VERSION): Bump version number.
 
 2006-06-20  Bruno Haible  <bruno@clisp.org>
