--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-11-27  Bruno Haible  <bruno@clisp.org>
+
+	* version.sh: Bump version number to 0.16.1.
+
 2006-10-26  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-0.16 released.
