--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-11-27  Bruno Haible  <bruno@clisp.org>
 
+	* gettext-0.16.1 released.
+
+2006-11-27  Bruno Haible  <bruno@clisp.org>
+
 	* version.sh: Bump version number to 0.16.1.
 
 2006-10-26  Bruno Haible  <bruno@clisp.org>
