--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,16 @@
+2007-06-07  Bruno Haible  <bruno@clisp.org>
+
+	* gettextP.h (gl_locale_name_canonicalize, gl_locale_name_posix,
+	gl_locale_name_default, gl_locale_name): New macros.
+	(_nl_locale_name_canonicalize): New declaration.
+	* localename.c: Include config.h unconditionally. Include gettextP.h or
+	localename.h.
+	(gl_locale_name_canonicalize): Renamed from
+	_nl_locale_name_canonicalize. Make static except in libintl.
+	(gl_locale_name_posix): Renamed from _nl_locale_name_posix.
+	(gl_locale_name_default): Renamed from _nl_locale_name_default.
+	(gl_locale_name): Renamed from _nl_locale_name.
+
 2007-05-28  Bruno Haible  <bruno@clisp.org>
 
 	* libintl.rc: New file.
