--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-06-08  Bruno Haible  <bruno@clisp.org>
+
+	* autogen.sh (GNULIB_MODULES_TOOLS_FOR_SRC): Add module 'localename'.
+	* Makefile.am (distcheck-hook): Compare also localename.c.
+
 2007-06-07  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.am (distcheck-hook): Check also intlmacosx.m4.
