--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,10 @@
+2007-06-08  Bruno Haible  <bruno@clisp.org>
+
+	* msginit.c: Include localename.h.
+	(_nl_locale_name): Remove declaration.
+	(main): Use gl_locale_name instead of _nl_locale_name.
+	* Makefile.am (msginit_LDADD): Remove localename object file.
+
 2007-05-28  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.am (WOE32_LDADD): New variable.
