--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,3 +1,7 @@
+2007-06-08  Bruno Haible  <bruno@clisp.org>
+
+	* autopoint.in: Update year in --version output.
+
 2007-06-07  Bruno Haible  <bruno@clisp.org>
 
 	* gettextize.in (m4filelist): Add intlmacosx.m4 to the list.
