--- a/gettext-tools/po/ChangeLog
+++ b/gettext-tools/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-06-11  Bruno Haible  <bruno@clisp.org>
+
+	* fr.po: Update from Christophe Combelles <ccomb@free.fr>.
+
 2007-01-30  Bruno Haible  <bruno@clisp.org>
 
 	* de.po: Update from Karl Eichwalder <ke@suse.de>.
