--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,3 +1,13 @@
+2007-06-17  Bruno Haible  <bruno@clisp.org>
+
+	* po-mode.el (po-validate): Protect the buffer-file-name against
+	shell interpretation.
+	Reported by Laurynas Biveinis <laurynas.biveinis@gmail.com>.
+
+2007-06-17  Bruno Haible  <bruno@clisp.org>
+
+	* po-mode.el (po-msgfmt-version-check): Recognize also 0.16.2-pre1.
+
 2007-06-08  Bruno Haible  <bruno@clisp.org>
 
 	* autopoint.in: Update year in --version output.
