--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,5 +1,9 @@
 2007-06-17  Bruno Haible  <bruno@clisp.org>
 
+	* po-mode.el (po-msgid-to-msgstr): Fix English message.
+
+2007-06-17  Bruno Haible  <bruno@clisp.org>
+
 	* po-mode.el (po-add-attribute, po-delete-attribute, po-fuzzy-regexp):
 	Don't recognize the syntax "#! fuzzy" any more.
 
