--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,8 @@
+2007-06-17  Bruno Haible  <bruno@clisp.org>
+
+	* gettext.texi (Locale Names): Explain the variant syntax.
+	Reported by Karl Berry <karl@freefriends.org>.
+
 2007-06-07  Bruno Haible  <bruno@clisp.org>
 
 	* gettext.texi (aclocal): Mention also intlmacosx.m4.
@@ -5,7 +10,7 @@
 2007-06-07  Bruno Haible  <bruno@clisp.org>
 
 	* xgettext.texi: Mention some caveats.
-	Reported by Ariel <asgettext@dsgml.com>.
+	Reported by Ariel Shkedi <asgettext@dsgml.com>.
 
 2007-06-03  Bruno Haible  <bruno@clisp.org>
 
