--- a/autoconf-lib-link/ChangeLog
+++ b/autoconf-lib-link/ChangeLog
@@ -1,3 +1,7 @@
+2007-06-27  Bruno Haible  <bruno@clisp.org>
+
+	* config.rpath: Upgrade to libtool-1.5.24.
+
 2006-12-24  Bruno Haible  <bruno@clisp.org>
 
 	Improve support for OpenBSD.
