Update the TP addresses after the TP moved.

--- a/gettext-runtime/doc/ChangeLog
+++ b/gettext-runtime/doc/ChangeLog
@@ -1,3 +1,8 @@
+2007-06-30  Bruno Haible  <bruno@clisp.org>
+
+	* nls.texi: Update email addresses and URLs after the Translation
+	Project moved.
+
 2007-06-03  Bruno Haible  <bruno@clisp.org>
 
 	* nls.texi (Using This Package): Recommend also to unset LC_ALL etc.
