--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,3 +1,9 @@
+2007-06-30  Bruno Haible  <bruno@clisp.org>
+
+	* po-mode.el (po-translation-project-address): Update email address
+	after the Translation Project moved.
+	(po-translation-project-mail-label): Update comment.
+
 2007-06-29  Karl Eichwalder  <ke@suse.de>
 
 	* po-mode.el (po-subedit-mode-menu-layout, po-mode-menu-layout):
