--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,7 @@
+2007-06-30  Bruno Haible  <bruno@clisp.org>
+
+	* lang-table.c (language_table): Fix entry for Javanese.
+
 2007-06-28  Bruno Haible  <bruno@clisp.org>
 
 	* format-gcc-internal.c (format_parse): Tweak an error message.
