--- a/gettext-runtime/src/ChangeLog
+++ b/gettext-runtime/src/ChangeLog
@@ -1,3 +1,10 @@
+2007-06-30  Bruno Haible  <bruno@clisp.org>
+
+	* envsubst.c (main): Use the standard --version output, see
+	<http://lists.gnu.org/archive/html/bug-gnulib/2007-03/msg00302.html>.
+	* gettext.c (main): Likewise.
+	* ngettext.c (main): Likewise.
+
 2007-06-08  Bruno Haible  <bruno@clisp.org>
 
 	* gettext.c (main): Update year in --version output.
