--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,5 +1,27 @@
 2007-06-30  Bruno Haible  <bruno@clisp.org>
 
+	* hostname.c (main): Use the standard --version output, see
+	<http://lists.gnu.org/archive/html/bug-gnulib/2007-03/msg00302.html>.
+	* msgattrib.c (main): Likewise.
+	* msgcat.c (main): Likewise.
+	* msgcmp.c (main): Likewise.
+	* msgcomm.c (main): Likewise.
+	* msgconv.c (main): Likewise.
+	* msgen.c (main): Likewise.
+	* msgexec.c (main): Likewise.
+	* msgfilter.c (main): Likewise.
+	* msgfmt.c (main): Likewise.
+	* msggrep.c (main): Likewise.
+	* msginit.c (main): Likewise.
+	* msgmerge.c (main): Likewise.
+	* msgunfmt.c (main): Likewise.
+	* msguniq.c (main): Likewise.
+	* recode-sr-latin.c (main): Likewise.
+	* urlget.c (main): Likewise.
+	* xgettext.c (main): Likewise.
+
+2007-06-30  Bruno Haible  <bruno@clisp.org>
+
 	* lang-table.c (language_table): Fix entry for Javanese.
 
 2007-06-28  Bruno Haible  <bruno@clisp.org>
