--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,5 +1,11 @@
 2007-06-30  Bruno Haible  <bruno@clisp.org>
 
+	* autopoint.in (func_version): Use the standard --version output, see
+	<http://lists.gnu.org/archive/html/bug-gnulib/2007-03/msg00302.html>.
+	* gettexize.in (func_version): Likewise.
+
+2007-06-30  Bruno Haible  <bruno@clisp.org>
+
 	* po-mode.el (po-check-file-header): Use save-restriction.
 	Report and patch by Sven Joachim <sven_joachim@web.de> in
 	<http://lists.gnu.org/archive/html/bug-gnu-utils/2006-08/msg00110.html>.
