--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-07-06  Bruno Haible  <bruno@clisp.org>
+
+	* autogen.sh: Add an option --skip-gnulib.
+
 2007-06-28  Bruno Haible  <bruno@clisp.org>
 
 	* HACKING: New file.
