--- a/gettext-tools/ChangeLog
+++ b/gettext-tools/ChangeLog
@@ -1,3 +1,7 @@
+2007-07-07  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.am (SUBDIRS): Remove libuniname.
+
 2007-05-28  Bruno Haible  <bruno@clisp.org>
 
 	* configure.ac (WOE32): New conditional.
