--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-07-07  Bruno Haible  <bruno@clisp.org>
+
+	* autogen.sh (GNULIB_MODULES_TOOLS_FOR_SRC): Add uniname/uniname.
+
 2007-07-06  Bruno Haible  <bruno@clisp.org>
 
 	* autogen.sh: Add an option --skip-gnulib.
